--- a/software/mqtt-ui/Dockerfile
+++ b/software/mqtt-ui/Dockerfile
@@ -2,7 +2,7 @@ FROM alpine
 RUN apk add --no-cache darkhttpd
 ADD https://github.com/hivemq/hivemq-mqtt-web-client/archive/master.zip /www/
 RUN unzip /www/master.zip -d /www
-RUN echo "websocketserver = '52.57.219.134'; \
+RUN echo "websocketserver = 'localhost'; \
 websocketport = 9001;" > /www/hivemq-mqtt-web-client-master/config.js
 RUN sed -i "s/\'clientId-\'/\'mqttdash-\'/" /www/hivemq-mqtt-web-client-master/index.html && \
 	sed -i "s/<\/body>/<script>setTimeout(function(){websocketclient.connect()},200);<\/script><\/body>/" /www/hivemq-mqtt-web-client-master/index.html
